src/components/Button/button.module.css
.base {
  display: inline-flex;
  align-items: end;
  justify-content: center;
  gap: var(--space-sm);
  font-size: var(--paragraph);
  border-radius: var(--border-radius-sm);
  background-image: linear-gradient(#ffffff00, #ffffff33);
}

.primary {
  background-color: var(--brand-500);
  color: var(--black) !important;
  box-shadow: inset 0 0 0 1px var(--brand-500);
}

.primary:hover {
  background-image: linear-gradient(#0000000d, #0000000d),
    linear-gradient(#ffffff00, #ffffff33);
}

.secondary {
  background-color: var(--neutral-800);
  color: var(--white);
  box-shadow: inset 0 0 0 1px var(--neutral-800);
}

.secondary:hover {
  background-image: linear-gradient(#0000000d, #0000000d),
    linear-gradient(#ffffff00, #ffffff33);
}

.tertiary {
  color: var(--white);
  box-shadow: inset 0 0 0 1px var(--section-outline);
}

.tertiary:hover {
  background-image: linear-gradient(#0000000d, #0000000d),
    linear-gradient(#ffffff00, #ffffff33);
}

.ghost {
  background-image: unset;
  color: var(--brand-500);
}

.ghost:hover {
  color: var(--brand-600);
}

.large {
  padding: 8px 16px;
}

.medium {
  padding: 8px 4px;
}

.small {
  padding: 4px;
}

